[package]
name = "regitry-code"
version = "0.1.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
repository = "https://github.com/sivanbil/date-formatter"
description = "A date formatter crate implemented without any third-party dependencies."
license = "MIT"

[lib]
name = "regitry_code"

[dependencies]
smcrypto = "0.3.1"  # SM2 加密算法
hex = "0.4.3"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.39"
base64 = "0.13"

