[package]
name = "regitry-code"
version = "1.0.3"
edition = "2021"
authors = ["Sivan <sivanliaobil@gmail.com>"]
repository = "https://github.com/sivanbil/encrypt-utils-rust.git"
description = "regitry-code 是一个使用 SM2、SM3 国密算法进行加密、解密和生成注册码、密码的类库"
license = "MIT"

[lib]
name = "regitry_code"

[dependencies]
smcrypto = "0.3.1"  # SM2 加密算法
hex = "0.4.3"
clap = { version = "4.5.23", features = ["derive"] }
rand = "0.8.5"
chrono = "0.4.39"
base64 = "0.13"

# 特性定义
[features]
default = []  # 默认特性，不包含密码相关功能
password = [] # 启用密码相关功能

